# TokenOS

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TOKENOS_DUE_DILIGENCE_AUDIT.md  TokenOS Main Report.txt  deny.toml  go.mod  sample_dataset.yaml
.github/workflows/: ci.yml
.github/workflows-staged/: README.md  ci.yml
cmd/tokenos/: commands.go  main.go
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  GETTING_STARTED.md  PRODUCTION_READINESS.md  RISK_ACCEPTANCE.md  SECURITY.md  TROUBLESHOOTING.md
internal/config/: config.go  filter.go  filter_test.go
internal/contextidx/: extract.go  indexer.go  indexer_test.go
internal/engine/: engine.go
internal/kernel/: route.go  router.go  router_test.go  state.go
internal/loopdetect/: loopdetect.go  loopdetect_test.go
internal/payload/: payload.go
internal/pricing/: pricing.go  pricing_test.go
internal/provider/: anthropic.go  gemini.go  mock.go  openai.go  provider.go
internal/recorder/: recorder.go
internal/store/: store.go  store_test.go
internal/tokenizer/: tokenizer.go  tokenizer_test.go
internal/verify/: verify.go  verify_test.go
internal/webui/: server.go
internal/webui/static/: app.js  index.html  style.css
src/: config.rs  contextidx.rs  engine.rs  jsonrescue.rs  kernel.rs  lib.rs  loopdetect.rs  main.rs  maskcodec.rs  nativeapp.rs  payload.rs  pricing.rs  provider.rs  recorder.rs  store.rs  tokenizer.rs  verify.rs  webui.rs
static/: app.js  index.html  style.css
