[package]
name = "tokenos"
version = "2.0.0"
edition = "2021"
description = "TokenOS — Token-Optimal Agent Execution Kernel (native Rust)"
license = "MIT"

[lib]
name = "tokenos"
path = "src/lib.rs"

[[bin]]
name = "tokenos"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "net"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["timeout"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
walkdir = "2"
once_cell = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
strip = true
