[package]
name = "tokenos"
version = "2.0.0"
edition = "2021"
description = "TokenOS — Token-Optimal Agent Execution Kernel (native Rust)"
license = "AGPL-3.0-only"

[lib]
name = "tokenos"
path = "src/lib.rs"

[[bin]]
name = "tokenos"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "net"] }
axum = "0.7"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "tokio"] }
tokio-rustls = "0.26"
tower-http = { version = "0.6", features = ["timeout", "catch-panic"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
regex = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
walkdir = "2"
once_cell = "1"
[features]
default = []
# `cargo build --release --features native` → enables `tokenos app`.
# The launcher intentionally uses the OS browser over an ephemeral loopback
# dashboard instead of bundling a webview dependency chain.
native = []

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
strip = true
